--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
-@media  screen and (max-width: 600px){
-    .conatiner{
+@media  screen and (max-width: 480px){
+    .container{
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, 1fr) !important;
     }
 }
