--- a/src/pages/SecondBanner/SecondBanner.css
+++ b/src/pages/SecondBanner/SecondBanner.css
@@ -3,6 +3,10 @@
         flex-direction: column;
     }
 
+    h1{
+        margin-top: 20px !important; 
+    }
+
     img{
         width: 100% !important;
     }
